added main page

--- a/index.html
+++ b/index.html
@@ -28,18 +28,45 @@
             </section>
             <section>
                 <article>
-                    <h1>Header 2</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vehicula malesuada ante in ullamcorper. Donec ultricies mi velit, eu accumsan urna feugiat vel. Nullam pharetra rhoncus enim nec aliquam. Praesent malesuada diam eu nunc mollis, molestie rutrum libero vehicula. Phasellus et lectus nec lectus viverra malesuada ac ut nulla. Fusce sollicitudin suscipit purus a vestibulum. Aliquam eu felis quis felis mattis convallis ut nec est. Cras a pharetra sem. Pellentesque tristique sed massa et mollis. Nullam neque erat, euismod et pellentesque eu, pharetra ut est. Integer lobortis varius nunc sed ultricies.</p>
-               </article>
+                    <img class="article-image" src="images/1.jpg" alt="Why is jewelry a good gift idea?">
+                        <div class="article-header">
+                            <h3>
+                                <a class="article-name" href="#">Why is jewelry a good gift idea?</a>
+                            </h3>
+                        </div>
+                    <div class="article-content">                            
+                        <p>During the year, at least several times we face the serious challenge of choosing the right gift. For your other half, family or friends. There are many opportunities to give your loved ones something from the heart, and above all, something unique that will fulfill its function and be useful on a daily basis.</p>
+                    </div>
+                    <a class="readmore" href="#">Read more »</a>
+                </article> 
                 <article>
-                    <h1>Header 3</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vehicula malesuada ante in ullamcorper. Donec ultricies mi velit, eu accumsan urna feugiat vel. Nullam pharetra rhoncus enim nec aliquam. Praesent malesuada diam eu nunc mollis, molestie rutrum libero vehicula. Phasellus et lectus nec lectus viverra malesuada ac ut nulla. Fusce sollicitudin suscipit purus a vestibulum. Aliquam eu felis quis felis mattis convallis ut nec est. Cras a pharetra sem. Pellentesque tristique sed massa et mollis. Nullam neque erat, euismod et pellentesque eu, pharetra ut est. Integer lobortis varius nunc sed ultricies.</p>
-               </article>
+                    <img class="article-image" src="images/2.jpg" alt="How to care for your jewelry so that it serves you as long as possible?">
+                        <div class="article-header">
+                            <h3>
+                                <a class="article-name" href="#">How to care for your jewelry so that it serves you as long as possible?</a>
+                            </h3>
+                        </div>
+                    <div class="article-content">                            
+                        <p>
+                            When to take off a ring? Can you sleep with earrings on? How to care for chains? If you want your trinkets to look great for a long time, learn how to properly use and care for your jewelry.                        </p>
+                    </div>
+                    <a class="readmore" href="#">Read more »</a>
+                </article>
                 <article>
-                    <h1>Header 4</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vehicula malesuada ante in ullamcorper. Donec ultricies mi velit, eu accumsan urna feugiat vel. Nullam pharetra rhoncus enim nec aliquam. Praesent malesuada diam eu nunc mollis, molestie rutrum libero vehicula. Phasellus et lectus nec lectus viverra malesuada ac ut nulla. Fusce sollicitudin suscipit purus a vestibulum. Aliquam eu felis quis felis mattis convallis ut nec est. Cras a pharetra sem. Pellentesque tristique sed massa et mollis. Nullam neque erat, euismod et pellentesque eu, pharetra ut est. Integer lobortis varius nunc sed ultricies.</p>
-               </article>
+                    <img class="article-image" src="images/3.jpg" alt="How to choose an engagement ring?">
+                        <div class="article-header">
+                            <h3>
+                                <a class="article-name" href="#">How to choose an engagement ring?</a>
+                            </h3>
+                        </div>
+                    <div class="article-content">                            
+                        <p>
+                            How to choose an engagement ring? How much should it cost? Does an engagement ring have to have a diamond? If you are planning an unforgettable proposal and are looking for a beautiful engagement ring, be sure to read our guide.</p>
+                    </div>
+                    <a class="readmore" href="#">Read more »</a>
+                </article>
             </section>
+            <hr>
         </main>
         <footer>
             <div>
