fixed styles of article cards

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
             </section>
             <section>
                 <article>
-                    <img class="article-image" src="images/1.jpg" alt="Why is jewelry a good gift idea?">
+                    <a href="#">                   
+                        <img class="article-image" src="images/1.jpg" alt="Why is jewelry a good gift idea?">
+                    </a>
                         <div class="article-header">
-                            <h3>
-                                <a class="article-name" href="#">Why is jewelry a good gift idea?</a>
-                            </h3>
+                            <a class="article-name" href="#"><h3>Why is jewelry a good gift idea?</h3></a>
                         </div>
                     <div class="article-content">                            
                         <p>During the year, at least several times we face the serious challenge of choosing the right gift. For your other half, family or friends. There are many opportunities to give your loved ones something from the heart, and above all, something unique that will fulfill its function and be useful on a daily basis.</p>
@@ -40,25 +40,28 @@
                     <a class="readmore" href="#">Read more »</a>
                 </article> 
                 <article>
-                    <img class="article-image" src="images/2.jpg" alt="How to care for your jewelry so that it serves you as long as possible?">
+                    <a href="#">                   
+                        <img class="article-image" src="images/2.jpg" alt="How to care for your jewelry so that it serves you as long as possible?">
+                    </a>
                         <div class="article-header">
-                            <h3>
-                                <a class="article-name" href="#">How to care for your jewelry so that it serves you as long as possible?</a>
-                            </h3>
+                            <a class="article-name" href="#"><h3>How to care for your jewelry so that it serves you as long as possible?</h3></a>
                         </div>
                     <div class="article-content">                            
                         <p>
                             When to take off a ring? Can you sleep with earrings on? How to care for chains? If you want your trinkets to look great for a long time, learn how to properly use and care for your jewelry.                        </p>
+                        </p>
                     </div>
                     <a class="readmore" href="#">Read more »</a>
                 </article>
                 <article>
-                    <img class="article-image" src="images/3.jpg" alt="How to choose an engagement ring?">
-                        <div class="article-header">
-                            <h3>
-                                <a class="article-name" href="#">How to choose an engagement ring?</a>
-                            </h3>
-                        </div>
+                    <a href="#">                   
+                        <img class="article-image" src="images/3.jpg" alt="How to choose an engagement ring?">
+                    </a>
+                    <div class="article-header">
+                        <h3>
+                            <a class="article-name" href="#">How to choose an engagement ring?</a>
+                        </h3>
+                    </div>
                     <div class="article-content">                            
                         <p>
                             How to choose an engagement ring? How much should it cost? Does an engagement ring have to have a diamond? If you are planning an unforgettable proposal and are looking for a beautiful engagement ring, be sure to read our guide.</p>
