--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         </header>
         <nav>
             <ul>
-                <li><a href="./index.html">Home page</a></li>
-                <li><a href="#products">Products</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./products.html">Products</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li><a href="#info">Info</a></li>
             </ul>
