--- a/products.html
+++ b/products.html
@@ -5,6 +5,7 @@
         <title>Mangata and Gallo</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Mangata and Gallo is a jewelry store that specializes in special occasions like engagements, weddings and anniversaries. The jewelry company primarily operates online and has a small storefront in Austin, Texas with an atelier attached for browsing. Mangata & Gallo's selection of jewelry is known for its high-quality and classic look. The owner, an Austin local, is well known for her jewelry designs.  ">
+        <link rel="stylesheet" href="css/styles.css" >
         <link rel="stylesheet" href="css/products.css" >
         <link href="https://db.onlinewebfonts.com/c/2596224269750e00c3ad5356299a3b9f?family=Ogg+Roman" rel="stylesheet">
         <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
